# DataEngineeringChallenge

./: README.md  invoicing.md  main.ipynb  pyproject.toml  requirements.txt
invoicing/: invoicing.md
src/crm/: README.md  asset_contracts_20250525_045438.csv  asset_contracts_20250608_043831.csv
src/distribution_system_operator/: README.md
src/exchange/: README.md
src/imbalance/: README.md
src/invoicing/: README.md
src/vpp/: README.md
